--- a/src/app/components/input/input.component.scss
+++ b/src/app/components/input/input.component.scss
@@ -119,7 +119,7 @@
     top: $top;
     width: $w;
     aspect-ratio: 1/1;
-    background: transparent;
+    background: $primaryDarkHover;
     border: none;
   }
 
