--- a/src/assets/sass/globalVariables.scss
+++ b/src/assets/sass/globalVariables.scss
@@ -1,8 +1,8 @@
 /* -------------------------------------------------------------------------- */
 /*                                   COLORS                                   */
 /* -------------------------------------------------------------------------- */
-$primaryDark: #1c2172;
-$primaryDarkHover: #151956;
+$primaryDark: #F89C1C;
+$primaryDarkHover: #fce08a;
 
 $primaryLight: #99FFFF;
 $primaryLightHover: #78C7DB;
