--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 
 <section class="login">
   <article class="login__form-login">
-    <h1 class="login__form-title">Hola! un gusto tenerte aqui de nuevo</h1>
+    <h1 class="login__form-title">¡Hola!👋, un gusto tenerte aqui de nuevo.🙌</h1>
     <p class="login__form-subtitle">
       Por favor, introduce tu información de para iniciar
     </p>
@@ -31,25 +31,27 @@
         inputType="password"
         formControlName="password"
         [msgError]="
-          password.errors &&
-          password.errors['required'] &&
-          password.touched === true
-            ? 'El campo contraseña es necesario'
-            : ''
-        "
+        password.errors &&
+        (password.errors['required'] || password.errors['minlength']) &&
+        password.touched === true
+        ? password.errors['required']
+        ? 'El campo contraseña es necesario'
+        : 'La contraseña debe tener al menos ' + password.errors['minlength'].requiredLength + ' caracteres'
+       : ''
+"
       ></app-input>
       <p class="login__error-message" *ngIf="isErrorMessage !== ''">
         {{ isErrorMessage }}
       </p>
       <div>
         <span class="txt1 p-b-17">
-            ¿No tienes cuenta?
+           ¿No tienes cuenta?
         </span>
        <button
         type="button"
         class="login__register-user"
         (click)="gotToRouterRegister()"
-      >crea una aqui
+      >crea una aqui.
       </button>
     </div>
 
